--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -13,5 +12,6 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Resource.Stone",DevComment="")
 +GameplayTagList=(Tag="Resource.Wood",DevComment="")
++GameplayTagList=(Tag="Skill.WoodCutting",DevComment="")
 +GameplayTagList=(Tag="Tools.Axe",DevComment="")
 
